tests/samples/invalid/unexpected_end_of_file.pn

fn main() -> i32
{
	var x: []i32 = [17, 50];
	if true == true
	{
		foo(
